funland/adguard/adguard-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns
  namespace: adguard
  annotations:
    service.cilium.io/type: LoadBalancer
    service.cilium.io/forwarding-mode: dsr
spec:
  selector:
    app: adguard-home
  ports:
  - protocol: TCP
    name: "53tcp"
    port: 53
    targetPort: 53 
  - protocol: UDP
    name: "53udp"
    port: 53
    targetPort: 53
  - protocol: TCP
    name: "853tcp"
    port: 853
    targetPort: 853
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  loadBalancerIP: 192.168.10.35
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: adguard-home-setup
#   namespace: adguard
# spec:
#   selector:
#     app: adguard-home
#   ports:
#   - protocol: TCP
#     name: "3000tcp"
#     port: 3000
#     targetPort: 3000
#   type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-http
  namespace: adguard
spec:
  selector:
    app: adguard-home
  ports:
  - protocol: TCP
    name: "http"
    port: 80
    targetPort: 80
  type: ClusterIP
