funland/adguard/adguard-home/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "adguard.batlab.io"
  rules:
    - backendRefs:
        - name: http-initial
          port: 3000
